fix: adjusted spacing of about us hero to closer match figma

--- a/app/(pages)/about-us/_components/Hello/Hello.module.scss
+++ b/app/(pages)/about-us/_components/Hello/Hello.module.scss
@@ -20,16 +20,21 @@ $tablet-breakpoint: 768px;
     // border: 1px solid black; 
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 58vw;
+
 
     @media (max-width: $tablet-breakpoint) {
         margin-top: 10%;
+        width: 75vw;
+
     }
     
     h1{
         font-family: 'Metropolis', sans-serif;
         color: var(--teal-1, #005271);
         text-align: left;
-        font-size: 72px;
+        font-size: 4rem;
         font-style: normal;
         font-weight: 800;
         line-height: normal;
@@ -44,11 +49,12 @@ $tablet-breakpoint: 768px;
         color: var(--teal-1, #005271);
         text-align: left;
         font-family: "Metropolis", sans-serif;
-        font-size: 40px;
+        font-size: 2rem;
         font-style: normal;
         font-weight: 600;
         line-height: 150%; /* 60px */
         letter-spacing: 0.8px;
+        text-align: center;
 
         @media (max-width: $tablet-breakpoint) {
             font-size: 32px;
@@ -75,8 +81,10 @@ $tablet-breakpoint: 768px;
         padding-bottom: 0;
     }
     .title{
+        width: 83vw;
+
         h1{
-            font-size: 48px;
+            font-size: 3rem;
             line-height: 58px;
             letter-spacing: 0.96px;
             text-align: left;
@@ -87,11 +95,12 @@ $tablet-breakpoint: 768px;
             letter-spacing: 0.96px;
         }
         p{
-            font-size: 24px;
+            font-size: 1.25rem;
             line-height: 36px;
             letter-spacing: 0.48px;
             text-align: left;
             font-weight: 500;
+            margin-top: 24px;
         }
     }
     
